--- a/maths/cosm/cosm-links.html
+++ b/maths/cosm/cosm-links.html
@@ -99,7 +99,7 @@ td {
   height: 30px;
 }
 
-
+																																					
 #type1
 {
 	
@@ -235,7 +235,7 @@ td {
 	</tr>
 	
 	<tr>
-<td ><strong>8</strong></td>
+	<td ><strong>8</strong></td>
 	<td><strong><div align="left">Continuous Probability Distributions-II</div></strong></td>
 	<td><strong><div align="left">Dr V.Kavitha</div></strong></td>
 	<td><strong><a href="https://www.youtube.com/watch?v=s8BYxeknMRk&t=244s">Click for Video</a></strong></td>
@@ -332,13 +332,13 @@ td {
 	<td><strong><div align="left">Dr V.Kavitha</div></strong></td>
 	<td><strong><a href="https://www.youtube.com/watch?v=DhAPScFR5Fw&t=1117s" >Click for Video</a></strong></td>
 </tr>
-
+<tr><td colspan='4'></td></tr>
 <tr>	
 <td></td>
 <td><strong><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EVpX3QEHIiZDnCqLOAqWfycBQMt9933827RAECPImfB2Tg?e=yQEPYG">Click to Download Module-II Lecture Notes</a></strong></td>
 
 </tr>
-</table>
+
 
 <table width="100%">
 <tr>
@@ -421,6 +421,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=69
 PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=70
 " >Click for Video</a></strong></td>
 </tr>
+
 <tr>
 <td></td>
 <td><strong><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EVm-7EDjK4tKrqwc4cQwES4BnTGEWujwEimTqMOmdQ9rIA?e=Yl1vR7">Click to Download Module-III Lecture Notes</a></strong></td>
@@ -610,13 +611,30 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=32
 	<td><strong><a href="https://www.youtube.com/watch?v=W8qczNJFPKM&list=
 PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=30
 " >Click for Video</a></strong></td>
-</tr>
+</tr><tr><td colspan='4'></td></tr>
 <tr>
 	<td></td>
 <td><strong><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EQ7o_fu44YZJlrCM45mK9RkBJm3cMM1hzQMfExpSD2E2Zw?e=8Znmfi">Click to Download Module-V Lecture Notes</a></strong></td>
+</tr>
+<table width="100%">
+	<tr>
+	<th class="menu top"; colspan=4 style="color: #ff5733;"> EXAM MODEL PAPERS</th>
+	</table>
+	</br>
+	<tr>
+	<table>	
+<table width="100%">
+<tr  style="text-align:center;">
+
+		<th width="33%"><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EXUxMDBjq5NOp6XlHpIZDOABVyp2_WiRyW5cq4T91fc-oQ?e=vhzbNu" style="color: #fff;">COSM CAT-I Model Paper-A8005</a></th>
+		<th width="33%"><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/Ef2bfhJU9ABMsSvmLd4xjAkB1ApqDsDc85prEjfRv9WAPw?e=ojJj9n" style="color: #fff;" >COSM CAT-II Model Paper-A8005</a></th>
+		<th width="33%"><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EULVQjdErClLkH3r2i70fTYBpd5_MjU7SA4VNS8bHED_iw?e=X1I5CU" style="color: #fff;" >COSM SEE Model Paper -A8005</a></th>
+		</tr>
+
 </tr>
     
    </table>
     </div>
 </body>
 </html>
+
