--- a/maths/pds/pds-links.html
+++ b/maths/pds/pds-links.html
@@ -204,8 +204,12 @@ td {
 	<td><strong><a href="https://www.youtube.com/watch?v=s8BYxeknMRk&t=244s">Click for Video</strong></td></tr>
 	
 	</tr>
+	<tr> 
+   <td></td>    
+  <td><strong><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EcIF2hwOHVxNh5negXuhd0ABzRlkBZDa9BBrU1hoCAsXBA?e=mAVH50">Click to Download Module-I Lecture Notes</a></strong></td>
+    </tr>
 	</table>
-	<br>
+
 	
 <table width="100%">
 	<tr>
@@ -293,8 +297,11 @@ td {
 	<td><strong>Dr V.Kavitha</strong></td>
 	<td><strong><a href="https://www.youtube.com/watch?v=DhAPScFR5Fw&t=1117s" >Click for Video</strong></td></strong></td>
 	</tr>
+	<tr> 
+   <td></td>    
+  <td><strong><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EayDXYY5USlJmlBu_1yKM6kB1vLL-QFnAt-IcsvdC9TJLA?e=uDzyCe">Click to Download Module-I Lecture Notes</a></strong></td>
+    </tr>
 	</table>
-	<br>
 	
 	
 	<table width="100%">
@@ -365,8 +372,11 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=70
 PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=10
 " >Click for Video</strong></td>
 </tr>
+<tr> 
+   <td></td>    
+  <td><strong><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EaIqXJLJK49Kp0VWKUu0XdgBoq0uC3pP6W1XiLDo7p4ipw?e=Vwkn08">Click to Download Module-I Lecture Notes</a></strong></td>
+    </tr>
 </table>
-<br>
 
 
 <table width="100%">
@@ -429,17 +439,17 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=47
 	<td><strong>Dr V.Lakshmi Narayana</strong></td>
 	<td><strong><a href="https://www.youtube.com/watch?v=tPHWclHCQiQ&list=
 PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=48
-" >Click for Video</strong></td></strong></td>
-	</tr>
+" >Click for Video</strong></td>
+</tr>
 	
-	</tr>
-	<table>
-	<br>
+   <td></td>    
+  <td><strong><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EQtsDe2yZPxMr3mF3IYeX68B85lKb6lpguN8YY1tQfmCzQ?e=ZoCVSf">Click to Download Module-I Lecture Notes</a></strong></td>
+    </tr></table>
 	
-	
+		
 	<table width="100%">
 	<tr>
-	<th class="menu top"; colspan=4 style="color: #ff5733;"> MODULE - V</th>
+	<th class="menu top"; colspan=4 style="color: #ff5733;">MODULE - V</th>
 </tr>
 </table>
 <table width="100%">
@@ -514,7 +524,27 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=32
 	<td><strong><a href="https://www.youtube.com/watch?v=W8qczNJFPKM&list=
 PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=30
 " >Click for Video</strong></td></strong></td>
-    </tr>  
+    </tr>
+<tr><tr><td colspan='4'></td></tr> 
+   <td></td>    
+  <td><strong><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EUtW98aqoQNDobX18G2O4KoBILNzwadSMkvsk3vI3DRy2Q?e=L2Gnzb">Click to Download Module-I Lecture Notes</a></strong></td>
+    </tr>	
+	<table width="100%">
+	<tr>
+	<th class="menu top"; colspan=4 style="color: #ff5733;"> EXAM MODEL PAPERS</th>
+	</table>
+	</br>
+	<tr>
+	<table>	
+<table width="100%">
+<tr  style="text-align:center;">
+
+		<th width="33%"><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EejF25l4-ZVNopgE79_Y2CMBnBSi555-r4sF0wZ8LKj5SA?e=bafiBJ" style="color: #fff;">PDS CAT-I Model Paper-A8003</a></th>
+		<th width="33%"><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EW4O-TJnUGdAoVdubza3GlYBjPxMgaAfzUmcP_A44wy_Ug?e=X5hwsn" style="color: #fff;">PDS CAT-II Model Paper-A8003</a></th>
+		<th width="33%"><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EU_qcVZs_1ZDrk4bQFjmGDsBXk77bBFIHmL_cqYhn5aDjg?e=JhEUd7" style="color: #fff;">PDS SEE Model Paper -A8003</a></th>
+		</tr>
+
+</tr>
     </table>
 	<br>
 	       
