--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	font-size:1.5em;
 	font-family:calibri;
 	font-weight: bold;
-	color:#03C;
+	color:#FF5722;
 	}
 table { 
   width: 100%; 
@@ -20,17 +20,17 @@ table {
 }
 /* Zebra striping */
 tr:nth-of-type(odd) { 
-  background: #bce0bc; 
+  background: #c5c6c9; 
   }
 th { 
-  background: #333; 
-  color: white; 
+  background: #c5c6c9; 
+  color: #FF5722; 
   font-weight: bold; 
   
 }
 td, th { 
   padding: 6px; 
-  border: 1px solid #ccc; 
+  border: 1px solid #e3e878; 
   text-align: left; 
   }
 
@@ -75,7 +75,7 @@ td, th {
 #top
 {
 	height:141px;
-	background-color:#bce0bc;
+	background-color:#c5c6c9;
 	
 }
 
@@ -92,7 +92,7 @@ td, th {
 <br />
 
 <hr>
-<div align="center"><p style="font-size:22px;color:#F00; font:calibri; font-weight:bold; text-decoration:underlined;">Click on Department for Video Lectures</p></div>
+<div align="center"><p style="font-size:22px;color:#FF5722; font:calibri; font-weight:bold; text-decoration:underlined;">Click on Department for Video Lectures</p></div>
 
 <table width="100%">
 
