--- a/maths-sub.html
+++ b/maths-sub.html
@@ -12,7 +12,7 @@
 	font-size:1.5em;
 	font-family:calibri;
 	font-weight: bold;
-	color:#03C;
+	color:#FF5722;
 	}
 table { 
   width: 100%; 
@@ -20,17 +20,17 @@ table {
 }
 /* Zebra striping */
 tr:nth-of-type(odd) { 
-  background: #bce0bc; 
+  background: #c5c6c9; 
   }
 th { 
-  background: #333; 
-  color: white; 
+  background: #c5c6c9; 
+  color: #FF5722; 
   font-weight: bold; 
   
 }
 td, th { 
   padding: 6px; 
-  border: 1px solid #ccc; 
+  border: 1px solid #e3e878; 
   text-align: left; 
   }
 
@@ -75,9 +75,8 @@ td, th {
 #top
 {
 	height:141px;
-	background-color:#bce0bc;
-	padding-top:5px;
-	padding-bottom:5px;
+	background-color:#c5c6c9;
+	
 }
 
 </style>
