--- a/maths/cosm/cosm-links.html
+++ b/maths/cosm/cosm-links.html
@@ -12,26 +12,28 @@
 	font-size:1.5em;
 	font-family:calibri;
 	font-weight: bold;
-	color:#FF5722;
+	color:#03045e;
 	}
 table { 
   width: 100%; 
   border-collapse: collapse; 
+  
 }
 /* Zebra striping */
-tr:nth-of-type(odd) { 
-  background: #c5c6c9; 
+/*tr:nth-of-type(even)*/ { 
+  background: #12121c; 
   }
 th { 
   background: #c5c6c9; 
-  color: #FF5722; 
+  color: #03045e; 
   font-weight: bold; 
   
 }
 td, th { 
   padding: 6px; 
-  border: 1px solid #e3e878; 
+  border: 2px solid #12121c; 
   text-align: left; 
+  
   }
 
 
@@ -74,8 +76,8 @@ td, th {
 
 #top
 {
-	height:141px;
-	background-color:#c5c6c9;
+	height:161px;
+	background-color:#ededed;
 	
 }
 
