--- a/maths/cosm/cosm-links.html
+++ b/maths/cosm/cosm-links.html
@@ -90,18 +90,13 @@ td, th {
 <img src="../../images/12345.png">
 
 
-</div>
-<div id="top">
-
-</div>
-
 <table width="100%">
 <tr>
-	<th class="menu top"; colspan=4 style="color: #ffffff;">A8005 - COMPUTER ORIENTED STATISTICAL METHODS</th>
+	<th class="menu top"; colspan=4 style="text-align:center;""color: #03045e;">A8005 - COMPUTER ORIENTED STATISTICAL METHODS</th>
 </tr>
 <table width="100%">
 	<tr>
-	<th class="menu top"; colspan=4 style="color: #ff5733;"> MODULE - I</th>
+	<th class="menu top"; colspan=4 style="color: #03045e;"> MODULE - I</th>
 </tr>
 </table>
 <table width="100%">
@@ -189,7 +184,7 @@ td, th {
 
 <table width="100%">
 	<tr>
-	<th class="menu top"; colspan=4 style="color: #ff5733;"> MODULE - II</th>
+	<th class="menu top"; colspan=4 style="color: #03045e;"> MODULE - II</th>
 </tr>
 </table>
 
@@ -280,7 +275,7 @@ td, th {
 <table width="100%">
 <tr>
 
-	<th class="menu top" colspan=4 style="color: #ff5733;">MODULE - III</th>
+	<th class="menu top" colspan=4 style="color:#03045e;">MODULE - III</th>
 </tr>
 </table>
 <table>
@@ -367,7 +362,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=70
 </table>
 		<table width="100%">
 			<tr>
-		<th class="menu top" style="color: #ff5733;">MODULE - IV</th></tr></table>
+		<th class="menu top" style="color:#03045e;">MODULE - IV</th></tr></table>
 		
 
 <table width="100%">
@@ -462,7 +457,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=48
 	
 	<table width="100%">
 		<tr>
-		<th class="menu top" style="color: #ff5733;">MODULE - V</th>
+		<th class="menu top" style="color:#03045e;">MODULE - V</th>
 		</tr>
 		</table>
 	
@@ -555,7 +550,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=30
 </tr>
 <table width="100%">
 	<tr>
-	<th class="menu top"; colspan=4 style="color: #ff5733;"> EXAM MODEL PAPERS</th>
+	<th class="menu top"; colspan=4;><div align="center"; style="color:#03045e;"> EXAM MODEL PAPERS</th>
 	</table>
 	</br>
 	<tr>
@@ -563,9 +558,9 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=30
 <table width="100%">
 <tr  style="text-align:center;">
 
-		<th width="33%"><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EXUxMDBjq5NOp6XlHpIZDOABVyp2_WiRyW5cq4T91fc-oQ?e=vhzbNu" style="color: #fff;">COSM CAT-I Model Paper-A8005</a></th>
-		<th width="33%"><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/Ef2bfhJU9ABMsSvmLd4xjAkB1ApqDsDc85prEjfRv9WAPw?e=ojJj9n" style="color: #fff;" >COSM CAT-II Model Paper-A8005</a></th>
-		<th width="33%"><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EULVQjdErClLkH3r2i70fTYBpd5_MjU7SA4VNS8bHED_iw?e=X1I5CU" style="color: #fff;" >COSM SEE Model Paper -A8005</a></th>
+		<th width="33%"><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EXUxMDBjq5NOp6XlHpIZDOABVyp2_WiRyW5cq4T91fc-oQ?e=vhzbNu" style="color:#03045e;">COSM CAT-I Model Paper-A8005</a></th>
+		<th width="33%"><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/Ef2bfhJU9ABMsSvmLd4xjAkB1ApqDsDc85prEjfRv9WAPw?e=ojJj9n" style="color:#03045e;" >COSM CAT-II Model Paper-A8005</a></th>
+		<th width="33%"><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EULVQjdErClLkH3r2i70fTYBpd5_MjU7SA4VNS8bHED_iw?e=X1I5CU" style="color:#03045e;" >COSM SEE Model Paper -A8005</a></th>
 		</tr>
 
 </tr>
