--- a/maths/cosm/cosm-links.html
+++ b/maths/cosm/cosm-links.html
@@ -12,11 +12,13 @@
 	font-size:1.5em;
 	font-family:calibri;
 	font-weight: bold;
-	color:#03045e;
+	
 	}
 table { 
   width: 100%; 
   border-collapse: collapse; 
+  color:#01142A;
+  background-color:#ccc;
   
 }
 /* Zebra striping */
@@ -24,14 +26,14 @@ table {
   background: #12121c; 
   }
 th { 
-  background: #c5c6c9; 
-  color: #03045e; 
+  background: #01142A; 
+  color: #ffffff; 
   font-weight: bold; 
   
 }
 td, th { 
   padding: 6px; 
-  border: 2px solid #12121c; 
+  border: 2px solid #000; 
   text-align: left; 
   
   }
@@ -80,6 +82,12 @@ td, th {
 	background-color:#ededed;
 	
 }
+.menu-top
+{
+background-color:#01142A;
+color:#ffffff;
+border: 2px solid #ffffff; 
+}
 
 </style>
 </head>
@@ -87,16 +95,16 @@ td, th {
 
 <div>
 <div id="top">
-<img src="../../images/12345.png">
+<center><img src="../../images/12345.png"></center>
 
 
 <table width="100%">
 <tr>
-	<th class="menu top"; colspan=4 style="text-align:center;""color: #03045e;">A8005 - COMPUTER ORIENTED STATISTICAL METHODS</th>
+	<th class="menu-top"; colspan=4 style="text-align:center;">A8005 - COMPUTER ORIENTED STATISTICAL METHODS</th>
 </tr>
 <table width="100%">
 	<tr>
-	<th class="menu top"; colspan=4 style="color: #03045e;"> MODULE - I</th>
+	<th class="menu-top"; colspan=4 > MODULE - I</th>
 </tr>
 </table>
 <table width="100%">
@@ -184,7 +192,7 @@ td, th {
 
 <table width="100%">
 	<tr>
-	<th class="menu top"; colspan=4 style="color: #03045e;"> MODULE - II</th>
+	<th class="menu-top"; colspan=4 > MODULE - II</th>
 </tr>
 </table>
 
@@ -275,7 +283,7 @@ td, th {
 <table width="100%">
 <tr>
 
-	<th class="menu top" colspan=4 style="color:#03045e;">MODULE - III</th>
+	<th class="menu top" colspan=4 >MODULE - III</th>
 </tr>
 </table>
 <table>
