--- a/maths/mac/mac-links.html
+++ b/maths/mac/mac-links.html
@@ -5,6 +5,52 @@
 <title>VARDHAMAN COLLEGE OF ENGG - VIDEO LECTURES</title>
 <head>
 <style>
+
+#select1
+{
+	
+	
+	color:rgb(0,0,0);
+	font-family:"Times New Roman", Times, serif;
+	width:100px;
+	
+	cursor:pointer;
+	font-weight:bold;
+	
+	
+
+}
+#select2
+{
+	
+	
+	color:rgb(0,0,0);
+	font-family:"Times New Roman", Times, serif;
+	width:100px;
+	
+	cursor:pointer;
+	font-weight:bold;
+	
+	
+
+}
+#select3
+{
+	
+	
+	color:rgb(0,0,0);
+	font-family:"Times New Roman", Times, serif;
+	width:100px;
+	
+	cursor:pointer;
+	font-weight:bold;
+	
+}
+table { 
+  width: 100%; 
+  border-collapse: collapse; 
+}
+
 #linked
 {
 	color:#000000;
@@ -12,7 +58,7 @@
 	font-size:1.5em;
 	font-family:calibri;
 	font-weight: bold;
-	color:#f2f2f5;
+	color:white;
 	}
 table { 
   width: 100%; 
@@ -20,8 +66,9 @@ table {
   
 }
 /* Zebra striping */
-/*tr:nth-of-type(even)*/ { 
-  background:#01142A
+tr:nth-of-type(even)
+ { 
+  background:#01142A;
   }
   
   /*TABLE HEAD STRIPS*/
@@ -100,7 +147,7 @@ td, th {
 
 <table width="100%">
 	<tr>
-	<th class="menu top"; colspan=4 style="color: #ffffff;">A8001 - MATRICES AND CALICULUS</th>
+	<th class="menu top"; colspan=4 style="color:#fcc305;">A8001 - MATRICES AND CALICULUS</th>
 </tr><tr>
 <th class="menu top"; colspan=4 style="color: #ff5733;"> MODULE - I</th>
 </tr>
