--- a/index.html
+++ b/index.html
@@ -7,35 +7,45 @@
 <style>
 #linked
 {
-	color:#000000;
+	color:#ffffff;
 	text-decoration:none;
 	font-size:1.5em;
 	font-family:calibri;
 	font-weight: bold;
-	color:#03045e;
+	/*color:#03045e;*/
 	}
 table { 
   width: 100%; 
   border-collapse: collapse; 
+  background-color:#01142A;
+  color:white;
   
 }
 /* Zebra striping */
 /*tr:nth-of-type(even)*/ { 
   background: #12121c; 
   }
+  
+  /*TABLE HEAD STRIPS*/
 th { 
   background: #c5c6c9; 
-  color: #03045e; 
-  font-weight: bold; 
+ /* color: #03045e;*/ 
+ color:white;
+  font-weight: bold;
   
+  
+  /*TABLE BORDERS*/
 }
 td, th { 
   padding: 6px; 
-  border: 2px solid #12121c; 
+  border: 2px solid #ccc; 
   text-align: left; 
   
   }
+a{
+color:white;
 
+}
 
 
 #type1
@@ -94,7 +104,7 @@ td, th {
 <br />
 
 <hr>
-<div align="center"><p style="font-size:22px;color:#03045e; font:calibri; font-weight:bold; text-decoration:underlined;">Click on Department for Video Lectures</p></div>
+<div align="center"><p style="font-size:22px;color:#F48126; font:calibri; font-weight:bold; text-decoration:underlined;">Click on Department for Video Lectures</p></div>
 
 <table width="100%">
 
@@ -156,7 +166,7 @@ td, th {
 			</tr>
 			
 			<tr>
-				<th class="menu top"><div align="center">OUR VISION</th><th><div align="center">OUR MISSION</th>
+				<th class="menu top"><div align="center"><span style="color:#01142A">OUR VISION</span></th><th><div align="center"><span style="color:#01142A">OUR MISSION</span></th>
 			</tr>
 			<tr>
 				<td style="text-align:justify;padding-left:8px;padding-right:8px; font: 19px Verdana, Georgia, 'Times New Roman', Times, sans-serif; line-height:1.7">To be a pioneer institute and leader in engineering education to address societal needs through education and practice.
