--- a/maths-sub.html
+++ b/maths-sub.html
@@ -7,17 +7,18 @@
 <style>
 #linked
 {
-	color:#000000;
+	color:#ffffff;
 	text-decoration:none;
 	font-size:1.5em;
 	font-family:calibri;
 	font-weight: bold;
-	color:#03045e;
+	
 	}
 table { 
   width: 100%; 
   border-collapse: collapse; 
-  
+  color:#ffffff;
+  background-color:#01142A;
 }
 /* Zebra striping */
 /*tr:nth-of-type(even)*/ { 
@@ -31,7 +32,7 @@ th {
 }
 td, th { 
   padding: 6px; 
-  border: 2px solid #12121c; 
+  border: 2px solid #ccc; 
   text-align: left; 
   
   }
