--- a/maths-sub.html
+++ b/maths-sub.html
@@ -94,7 +94,7 @@ td, th {
 <br />
 <br />
 <hr>
-<div align="center"><p style="font-size:22px;color:#03045e; font:calibri; font-weight:bold; text-decoration:underlined;">Click on Course for Video Lectures</p></div>
+<div align="center"><p style="font-size:22px;color:#0000ff; font:calibri; font-weight:bold; text-decoration:underlined;">Click on Course for Video Lectures</p></div>
 
 <table width="100%">
 
