--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ color:white;
 <br />
 
 <hr>
-<div align="center"><p style="font-size:22px;color:#F48126; font:calibri; font-weight:bold; text-decoration:underlined;">Click on Department for Video Lectures</p></div>
+<div align="center"><p style="font-size:22px;color:#0000ff; font:calibri; font-weight:bold; text-decoration:underlined;">Click on Department for Video Lectures</p></div>
 
 <table width="100%">
 
