--- a/maths-sub.html
+++ b/maths-sub.html
@@ -104,7 +104,7 @@ td, th {
 	</tr><tr>
 	<td> <div align="left"><a href="maths/odevc/odevc-links.html" id="linked">2. A8002 - Ordinary Differential Equations and Vector Calculus</a></td>
 	</tr><tr>
-	<td><div align="left"><a href="maths/cosm/cosm-links.html" id="linked">3. A8003 - Probability Distributions and Statistics</a></td>
+	<td><div align="left"><a href="maths/pds/pds-links.html" id="linked">3. A8003 - Probability Distributions and Statistics</a></td>
 	</tr><tr>
 	<td><div align="left"><a href="maths/nmcv/nmcv-links.html" id="linked">4. A8004 - Numerical Methods and Complex Variables </a></td>
 	</tr>
