--- a/maths/pds/pds-links.html
+++ b/maths/pds/pds-links.html
@@ -554,9 +554,9 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=30
 <table width="100%">
 <tr  style="text-align:center;">
 
-		<th width="33%"> <div align="center";><a href="" style="color:white;">PDS CAT-I Model Paper-A8005</a></th>
-		<th width="33%"><div align="center";><a href="" style="color:white;">PDS CAT-II Model Paper-A8005</a></th>
-		<th width="33%"><div align="center";><a href="" style="color:white;">PDS SEE Model Paper -A8005</a></th>
+		<th width="33%"> <div align="center";><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EejF25l4-ZVNopgE79_Y2CMBnBSi555-r4sF0wZ8LKj5SA?e=iXdFft" style="color:white;">PDS CAT-I Model Paper-A8005</a></th>
+		<th width="33%"><div align="center";><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EU_qcVZs_1ZDrk4bQFjmGDsBXk77bBFIHmL_cqYhn5aDjg?e=SbuPfO" style="color:white;">PDS CAT-II Model Paper-A8005</a></th>
+		<th width="33%"><div align="center";><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EW4O-TJnUGdAoVdubza3GlYBjPxMgaAfzUmcP_A44wy_Ug?e=NA2ci1" style="color:white;">PDS SEE Model Paper -A8005</a></th>
 		</tr>
 
 </tr>
