--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ color:white;
 
     <td><div align="center"><a href="aids.html" id="linked" >A I D S</a></td>
 
-    <td><div align="center"><a href="eee.html" id="linked" >E E E</a></td>
+    <td><div align="center"><a href="eee-sub.html" id="linked" >E E E</a></td>
 
   </tr>
 
