--- a/maths/nmcv/nmcv-links.html
+++ b/maths/nmcv/nmcv-links.html
@@ -232,7 +232,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=10
    <table width="100%">
           <tr>
             <th class="menu-top" colspan= "4" style="text-align: center">
-              <a class="link1" href="">Click to Download Module-I Lecture Notes</a>
+              <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/Eef7S639MBhHkUBDQynLXusBCCFpCYXmhViLfTwS9ru7gw?e=PbpU19">Click to Download Module-I Lecture Notes</a>
             </th>
           </tr>
         </table>
@@ -337,7 +337,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=2
 <table width="100%">
           <tr>
             <th class="menu-top" colspan= "4" style="text-align: center">
-              <a class="link1" href="">Click to Download Module-II Lecture Notes</a>
+              <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EayoRq51oK1JrLx5k5T-cBQBm9it-Zeny-XYekr0FYn8Ug?e=XcZ73F">Click to Download Module-II Lecture Notes</a>
             </th>
           </tr>
         </table>
@@ -451,7 +451,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=55
 <table width="100%">
           <tr>
             <th class="menu top" colspan= "4" style="text-align: center">
-              <a class="link1" href="">Click to Download Module-III Lecture Notes</a>
+              <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EQFc4azR2ndCu5WH2WPO0uUBlqcBy0-muYXo16W1gaM0LA?e=Bg7AgE">Click to Download Module-III Lecture Notes</a>
             </th>
           </tr>
         </table>
@@ -520,7 +520,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=55
 	<table width="100%">
           <tr>
             <th class="menu-top" colspan= "4" style="text-align: center">
-              <a class="link1" href="">Click to Download Module-IV Lecture Notes</a>
+              <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EX9wnqIwNj1Ek6c-pr9B9IEB5bvVmZ5FkiHb0_xW7ciB3Q?e=Hq5wQU">Click to Download Module-IV Lecture Notes</a>
             </th>
           </tr>
         </table>
@@ -585,7 +585,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=55
 	<table width="100%">
           <tr>
             <th class="menu-top" colspan= "4" style="text-align: center">
-              <a class="link1" href="">Click to Download Module - V Lecture Notes</a>
+              <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/ESc0p5LpNRNAi5vODGWGzZwBhz3vQOziHB_P3efh668aZw?e=D5mvH0">Click to Download Module - V Lecture Notes</a>
             </th>
           </tr>
         </table>
