--- a/maths/cosm/cosm-links.html
+++ b/maths/cosm/cosm-links.html
@@ -205,9 +205,9 @@ border: 2px solid #ffffff;
 
    <table width="100%">
           <tr>
-            <th class="menu top" colspan= "4" style="text-align: center">
+            <tr class="menu top" colspan= "4" style="text-align: center">
               <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EWHUft7N_DtDoG5EavqA2q4B157JxTZXTElwBW4RZun1iw?e=UPgqHI">Click to Download Module-I Lecture Notes</a>
-            </th>
+            </tr>
           </tr>
         </table>
 
