--- a/maths/mac/mac-links.html
+++ b/maths/mac/mac-links.html
@@ -383,7 +383,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=41" >Click for Video</a></strong></td>
 <table width="100%">
           <tr>
             <th class="menu top" colspan= "4" style="text-align: center">
-              <a class="link1" href="">Click to Download Module-III Lecture Notes</a>
+              <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EYu7-lQrRKNBlinzgQdTiwUBS2rhKLdmBTFBF7bJ4eCHFA?e=U9sbp8">Click to Download Module-III Lecture Notes</a>
             </th>
           </tr>
         </table>
@@ -476,8 +476,8 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=62" >Click for Video</a></strong></td><
 <tr>
 	<table width="100%">
           <tr>
-            <th class="menu top" colspan= "4" style="text-align: center">
-              <a class="link1" href="">Click to Download Module-IV Lecture Notes</a>
+            <th class="menu-top" colspan= "4" style="text-align: center">
+              <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EYPz2-4iBWNKnA4J0E8_pR0Bv4pxFtaDv4XUk5S2LQx35A?e=IOg3QH">Click to Download Module-IV Lecture Notes</a>
             </th>
           </tr>
         </table>
@@ -538,10 +538,8 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=65" >Click for Video</a></strong></td><
 	
       <tr>
 	<td><strong><div align="center">34</strong></td>
-	
 	<td><strong><div align="left">Applications of Multiple Integrals</div></strong></td>
 	<td><strong><div align="left">Dr V.Naganjaneyulu </div></strong></td>
-	
 	<td><strong><a href="https://www.youtube.com/watch?v=zX4EYsFQ510&list=
 PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=66" >Click for Video</a></strong></td>
 </tr>
@@ -549,8 +547,8 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=66" >Click for Video</a></strong></td>
 	<tr>
 	<table width="100%">
           <tr>
-            <th class="menu top" colspan= "4" style="text-align: center">
-              <a class="link1" href="">Click to Download Module - V Lecture Notes</a>
+            <th class="menu-top" colspan= "4" style="text-align: center">
+              <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/ERYCQW3mkJpFnrE4kf5YasIBkLjMbJJL6JLh0p5dmIeKgw?e=E89dQU">Click to Download Module - V Lecture Notes</a>
             </th>
           </tr>
         </table>
