--- a/maths/odevc/odevc-links.html
+++ b/maths/odevc/odevc-links.html
@@ -204,7 +204,7 @@ border: 2px solid #ffffff;
    <table width="100%">
           <tr>
             <th class="menu top" colspan= "4" style="text-align: center">
-              <a class="link1" href="">Click to Download Module-I Lecture Notes</a>
+              <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EQj_yeQLJYpOjT6eNNcD9YoB80YjBs5zYPStNAwWEF5Axw?e=Sboj35">Click to Download Module-I Lecture Notes</a>
             </th>
           </tr>
         </table>
@@ -293,7 +293,7 @@ border: 2px solid #ffffff;
 <table width="100%">
           <tr>
             <th class="menu-top" colspan= "4" style="text-align: center">
-              <a class="link1" href="">Click to Download Module-II Lecture Notes</a>
+              <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EVa7HtjU_a5AuTTPWwaXGMkBoGqgEWuibRGfyegD7Qertw?e=gQJLpo">Click to Download Module-II Lecture Notes</a>
             </th>
           </tr>
         </table>
@@ -374,7 +374,7 @@ border: 2px solid #ffffff;
 <table width="100%">
           <tr>
             <th class="menu top" colspan= "4" style="text-align: center">
-              <a class="link1" href="">Click to Download Module-III Lecture Notes</a>
+              <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EfWjOcyLg0JBrEH87YF-7DcBlFn5cTBn3UAwjNycGLUidw?e=mo6WTa">Click to Download Module-III Lecture Notes</a>
             </th>
           </tr>
         </table>
@@ -453,7 +453,7 @@ border: 2px solid #ffffff;
 	<table width="100%">
           <tr>
             <th class="menu top" colspan= "4" style="text-align: center">
-              <a class="link1" href="">Click to Download Module-IV Lecture Notes</a>
+              <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EVVStmGH44lJhEqSDaYn26sB_Vn84d-sz7LfwbFcc7jVsA?e=FQVMxu">Click to Download Module-IV Lecture Notes</a>
             </th>
           </tr>
         </table>
@@ -518,14 +518,12 @@ border: 2px solid #ffffff;
 </tr>
 	
 	
-	<tr><td colspan='4'></td></tr>
-<tr>
 	<table width="100%">
           <tr>
-            <th class="menu top" colspan= "4" style="text-align: center">
-            </th>
-              <a class="link1" href="">Click to Download Module - V Lecture Notes</a>
-          </tr>
+            <th class="menu-top" colspan= "4" style="text-align: center">
+            <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EUxixy8qwohEiRODWrzZAi4BxmAhW7tLWX_nhohaDaudBg?e=wVOtcY">Click to Download Module - V Lecture Notes</a>
+          </th>
+		  </tr>
         </table>
 
 <table width="100%">
@@ -537,9 +535,9 @@ border: 2px solid #ffffff;
 <table width="100%">
 <tr  style="text-align:center;">
 
-		<th width="33%"> <div align="center";><a href="" style="color:white;">COSM CAT-I Model Paper-A8005</a></th>
-		<th width="33%"><div align="center";><a href="" style="color:white;">COSM CAT-II Model Paper-A8005</a></th>
-		<th width="33%"><div align="center";><a href="" style="color:white;">COSM SEE Model Paper -A8005</a></th>
+		<th width="33%"> <div align="center";><a href="" style="color:white;">CAT-I Model Paper-A8002</a></th>
+		<th width="33%"><div align="center";><a href="" style="color:white;">CAT-II Model Paper-A8002</a></th>
+		<th width="33%"><div align="center";><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EU7v1TLISydCsFDRUHIVtioBqm4n__vCGZNkHL3v0xrY3A?e=vxEYQP" style="color:white;">SEE Model Paper -A8002</a></th>
 		</tr>
 
 </tr>
