--- a/maths/odevc/odevc-links.html
+++ b/maths/odevc/odevc-links.html
@@ -141,7 +141,7 @@ border: 2px solid #ffffff;
 	<td ><strong><div align="center">1</strong></td>
 	<td ><strong><div align="left">Exact Differential Equations</div></strong></td>
 	<td ><strong><div align="left">Dr.D Srinivas Reddy</div></strong></td>
-	<td ><strong><a href="">Click for Video</a></strong></td>
+	<td ><strong><a href="https://youtu.be/GsjZs6HnKrA">Click for Video</a></strong></td>
 	</tr>
 	
 	
@@ -149,7 +149,7 @@ border: 2px solid #ffffff;
 	<td ><strong><div align="center">2</strong></td>
 	<td ><strong><div align="left">Equations Reducible to Exact Form: Type - I, Type – II</div></strong></td>
 	<td ><strong><div align="left">Dr.D Srinivas Reddy</div></strong></td>
-	<td ><strong><a href="">Click for Video</a></strong></td>
+	<td ><strong><a href="https://youtu.be/7EhIp9fBHGw">Click for Video</a></strong></td>
 	</tr>
 
             
@@ -158,7 +158,7 @@ border: 2px solid #ffffff;
 	<td ><strong><div align="center">3</strong></td>
 	<td ><strong><div align="left">Equations Reducible to Exact Form: Type - III, Type - IV</div></strong></td>
 	<td ><strong><div align="left">Dr.D Srinivas Reddy</div></strong></td>
-	<td ><strong><a href="">Click for Video</a></strong></td>
+	<td ><strong><a href="https://youtu.be/97F1UYxo4EA">Click for Video</a></strong></td>
 	</tr>
 	
 	
@@ -166,7 +166,7 @@ border: 2px solid #ffffff;
 	<td ><strong><div align="center">4</strong></td>
 	<td ><strong><div align="left">Linear Differential Equations of First Order</div></strong></td>
 	<td ><strong><div align="left">Dr.D Srinivas Reddy</div></strong></td>
-	<td ><strong><a href="">Click for Video</a></strong></td>
+	<td ><strong><a href="https://youtu.be/_fzpvg1NrKk">Click for Video</a></strong></td>
 	</tr>
 	
 	
