--- a/maths/nmcv/nmcv-links.html
+++ b/maths/nmcv/nmcv-links.html
@@ -548,35 +548,35 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=55
 	
 	<tr>
 	<td><strong><div align="center">36</strong></td>
-	<td><strong><div align="left"></div></strong></td>
+	<td><strong><div align="left">Residue and Examples</div></strong></td>
 	<td><strong><div align="left">Dr.K Venkata Ramana</div></strong></td>
 	<td><strong><a href="" >Click for Video</a></strong></td>
 </tr>
 
 <tr>
 	<td><strong><div align="center">37</strong></td>
-	<td><strong><div align="left"></div></strong></td>
+	<td><strong><div align="left">Residue Theorem and Problems</div></strong></td>
 	<td><strong><div align="left">Dr.K Venkata Ramana</div></strong></td>
 	<td><strong><a href="" >Click for Video</a></strong></td>
 </tr>
 
 <tr>
 	<td><strong><div align="center">38</strong></td>
-	<td><strong><div align="left"></div></strong></td>
+	<td><strong><div align="left">Definite Integrals of Type I</div></strong></td>
 	<td><strong><div align="left">Dr.K Venkata Ramana</div></strong></td>
 	<td><strong><a href="" >Click for Video</a></strong></td>
 </tr>
 
 <tr>
 	<td><strong><div align="center">39</strong></td>
-	<td><strong><div align="left"></div></strong></td>
+	<td><strong><div align="left">Definite Integrals of Type II</div></strong></td>
 	<td><strong><div align="left">Dr.K Venkata Ramana</div></strong></td>
 	<td><strong><a href="" >Click for Video</a></strong></td>
 </tr>
 
 <tr>
 	<td><strong><div align="center">40</strong></td>
-	<td><strong><div align="left"></div></strong></td>
+	<td><strong><div align="left">Definite Integrals of Type III</div></strong></td>
 	<td><strong><div align="left">Dr.K Venkata Ramana</div></strong></td>
 	<td><strong><a href="" >Click for Video</a></strong></td>
 </tr>
