--- a/chemistry/ENGINEERING MATERIALS/materials-links.html
+++ b/chemistry/ENGINEERING MATERIALS/materials-links.html
@@ -179,17 +179,17 @@ border: 2px solid #ffffff;
 	<td ><strong><a href="https://youtu.be/ih-NrLIB37Y?si=K8anBVJXC9cVMB6I">Click for Video</a></strong></td>
 	</tr>
 
-<!--
+
 	
 
    <table width="100%">
           <tr>
             <th class="menu top" colspan= "4" style="text-align: center">
-              <a class="link1" href="">Click to Download Module-I Lecture Notes</a>
+              <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/ETEfydFQP_BEuiWSANht11wBQdDW7o1UwRhzmt5JSCJvfA?e=I28w1v">Click to Download Module-I Lecture Notes</a>
             </th>
           </tr>
         </table>
-
+<!--
 
 <table width="100%">
 	<tr>
