--- a/chemistry/POLYMERS/polymers-links.html
+++ b/chemistry/POLYMERS/polymers-links.html
@@ -141,7 +141,7 @@ border: 2px solid #ffffff;
 	<tr>
 	<td ><strong><div align="center">1</strong></td>
 	<td ><strong><div align="left">Polymers-Classification of Polymers</div></strong></td>
-	<td ><strong><div align="left">Dr. G Ramesh Kumar</div></strong></td>
+	<td ><strong><div align="left">Dr.G Ramesh Kumar</div></strong></td>
 	<td ><strong><a href="https://youtu.be/vWUB0OTtjKw?si=537a2vZVIOYtJMqd">Click for Video</a></strong></td>
 	</tr>
 	
@@ -149,8 +149,8 @@ border: 2px solid #ffffff;
 	<tr>
 	<td ><strong><div align="center">2</strong></td>
 	<td ><strong><div align="left">Classification of Polymerization</div></strong></td>
-	<td ><strong><div align="left">Dr. G Ramesh Kumar</div></strong></td>
-	<td ><strong><a href="">Click for Video</a></strong></td>
+	<td ><strong><div align="left">Dr.G Ramesh Kumar</div></strong></td>
+	<td ><strong><a href="https://youtu.be/2ACHY8gznxc">Click for Video</a></strong></td>
 	</tr>
 
             
@@ -158,7 +158,7 @@ border: 2px solid #ffffff;
 	<tr>
 	<td ><strong><div align="center">3</strong></td>
 	<td ><strong><div align="left">Plastics</div></strong></td>
-	<td ><strong><div align="left">Dr. G Ramesh Kumar</div></strong></td>
+	<td ><strong><div align="left">Dr.G Ramesh Kumar</div></strong></td>
 	<td ><strong><a href="https://youtu.be/DMcs5-aEKIw?si=ftJnzEvJsUkHeuTY">Click for Video</a></strong></td>
 	</tr>
 	
@@ -167,7 +167,7 @@ border: 2px solid #ffffff;
 	<td ><strong><div align="center">4</strong></td>
 	<td ><strong><div align="left">Fibers</div></strong></td>
 	<td ><strong><div align="left">Dr. G Ramesh Kumar</div></strong></td>
-	<td ><strong><a href="">Click for Video</a></strong></td>
+	<td ><strong><a href="https://youtu.be/HwV660kJ1pc">Click for Video</a></strong></td>
 	</tr>
 	
 	
@@ -192,7 +192,7 @@ border: 2px solid #ffffff;
    <table width="100%">
           <tr>
             <th class="menu top" colspan= "4" style="text-align: center">
-              <a class="link1" href="">Click to Download Module-I Lecture Notes</a>
+              <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EUUyfiyIfZ1Gh82_M81-DLwBrtm4FbPLwk6FZe3Ij8qFbQ?e=76CQco">Click to Download Module-I Lecture Notes</a>
             </th>
           </tr>
         </table>
