--- a/chemistry/battries and corision/battery-links.html
+++ b/chemistry/battries and corision/battery-links.html
@@ -185,7 +185,7 @@ border: 2px solid #ffffff;
    <table width="100%">
           <tr>
             <th class="menu top" colspan= "4" style="text-align: center">
-              <a class="link1" href="">Click to Download Module-I Lecture Notes</a>
+              <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/ERd8mjZTcdhMieDApq0CQdkBCVpjnRrSPJbjRrjFlIxZKQ?e=veAEo3">Click to Download Module-I Lecture Notes</a>
             </th>
           </tr>
         </table>
