--- a/chemistry/water and its treatement/water-links.html
+++ b/chemistry/water and its treatement/water-links.html
@@ -192,7 +192,7 @@ border: 2px solid #ffffff;
    <table width="100%">
           <tr>
             <th class="menu top" colspan= "4" style="text-align: center">
-              <a class="link1" href="">Click to Download Module-I Lecture Notes</a>
+              <a class="link1" href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EbBu1r5186JLqqFdoOVaTZYBZxZ4lqyt9QGN98i6qmLDjw?e=5EGmbg">Click to Download Module-I Lecture Notes</a>
             </th>
           </tr>
         </table>
