--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ color:white;
 
   <tr>
 
-    <td> <div align="center"><a href="cse.html" id="linked">C S E</a></td>
+    <td> <div align="center"><a href="cse-sub.html" id="linked">C S E</a></td>
 
     <td><div align="center"><a href="ece.html" id="linked">E C E</a></td>
 
