--- a/maths/odevc/odevc-links.html
+++ b/maths/odevc/odevc-links.html
@@ -478,8 +478,8 @@ border: 2px solid #ffffff;
 
 <tr>
 	<td><strong><div align="center">29</strong></td>
-	<td><strong><div align="left">Dr.G Padma</div></strong></td>
 	<td><strong><div align="left">Line Integrals</div></strong></td>
+	<td><strong><div align="left">Dr.G Padma</div></strong></td>
 	<td><strong><a href="" >Click for Video</a></strong></td></tr>
 <tr>
 	
@@ -515,9 +515,56 @@ border: 2px solid #ffffff;
 	<td><strong><div align="left">Gauss Divergence Theorem</div></strong></td>
 	<td><strong><div align="left">Dr.G Padma</div></strong></td>
 	<td><strong><a href="" >Click for Video</a></strong></td>
-</tr>
+	</tr>
 	
+	<tr>
+	<td><strong><div align="center">35</strong></td>
+	<td><strong><div align="left">Non Exact differential equation 3</div></strong></td>
+	<td><strong><div align="left">Dr.D Srinivas Reddy</div></strong></td>
+	<td><strong><a href="https://youtu.be/3hESanESw4M" >Click for Video</a></strong></td>
+	</tr>
 	
+	<tr>
+	<td><strong><div align="center">36</strong></td>
+	<td><strong><div align="left">Exact differential equation</div></strong></td>
+	<td><strong><div align="left">Dr.D Srinivas Reddy</div></strong></td>
+	<td><strong><a href="https://youtu.be/GsjZs6HnKrA" >Click for Video</a></strong></td>
+	</tr>
+	
+	<tr>
+	<td><strong><div align="center">37</strong></td>
+	<td><strong><div align="left">Non-Exact differential equation reducible to exact form 2</div></strong></td>
+	<td><strong><div align="left">Dr.D Srinivas Reddy</div></strong></td>
+	<td><strong><a href="https://youtu.be/97F1UYxo4EA" >Click for Video</a></strong></td>
+	</tr>
+	
+	<tr>
+	<td><strong><div align="center">38</strong></td>
+	<td><strong><div align="left">Linear Differential equation of first order</div></strong></td>
+	<td><strong><div align="left">Dr.D Srinivas Reddy</div></strong></td>
+	<td><strong><a href="https://youtu.be/_fzpvg1NrKk" >Click for Video</a></strong></td>
+	</tr>
+	
+	<tr>
+	<td><strong><div align="center">39</strong></td>
+	<td><strong><div align="left">Non-Exact Differential Equation reducible to exact form</div></strong></td>
+	<td><strong><div align="left">Dr.D Srinivas Reddy</div></strong></td>
+	<td><strong><a href="https://youtu.be/7EhIp9fBHGw" >Click for Video</a></strong></td>
+	</tr>
+	
+	<tr>
+	<td><strong><div align="center">40</strong></td>
+	<td><strong><div align="left">Newton's Law of cooling</div></strong></td>
+	<td><strong><div align="left">Dr.D Srinivas Reddy</div></strong></td>
+	<td><strong><a href="https://youtu.be/IiSAhFfDtfk" >Click for Video</a></strong></td>
+	</tr>
+	
+	<tr>
+	<td><strong><div align="center">41</strong></td>
+	<td><strong><div align="left">Non Linear Differential equation of First Order Bernoulli's Equation</div></strong></td>
+	<td><strong><div align="left">Dr.D Srinivas Reddy</div></strong></td>
+	<td><strong><a href="https://youtu.be/6cMMWnnw8nI" >Click for Video</a></strong></td>
+	</tr>
 	<table width="100%">
           <tr>
             <th class="menu-top" colspan= "4" style="text-align: center">
