--- a/eee/bee-links.html
+++ b/eee/bee-links.html
@@ -182,24 +182,31 @@ border: 2px solid #ffffff;
 
 	<tr>
 	<td ><strong><div align="center">6</strong></td>
-	<td><strong><div align="left"> </div></strong></td>
+	<td><strong><div align="left">Transformation Ratio</div></strong></td>
 	<td><strong><div align="left">Mr.M Seshagiri</div></strong></td>
-	<td><strong><a href="">Click for Video</a></strong></td>
+	<td><strong><a href="https://youtu.be/vHi-rE_eqIY">Click for Video</a></strong></td>
 	</tr>
 	
 	
 	<tr>
 	<td ><strong><div align="center">7</strong></td>
-	<td><strong><div align="left"></div></strong></td>
-	<td><strong><div align="left"></div></strong></td>
-	<td><strong><a href="">Click for Video</a></strong></td>
+	<td><strong><div align="left">Introduction to Basic Electrical Engineering</div></strong></td>
+	<td><strong><div align="left">Mr.M Seshagiri</div></strong></td>
+	<td><strong><a href="https://youtu.be/5OcSUK-r5ZM">Click for Video</a></strong></td>
 	</tr>
 	
 	<tr>
 	<td ><strong><div align="center">8</strong></td>
-	<td><strong><div align="left"></div></strong></td>
-	<td><strong><div align="left"></div></strong></td>
-	<td><strong><a href="">Click for Video</a></strong></td>
+	<td><strong><div align="left">Verification of Ohm's law</div></strong></td>
+	<td><strong><div align="left">Mr.M Seshagiri</div></strong></td>
+	<td><strong><a href="https://youtu.be/2YWOui9ejEk">Click for Video</a></strong></td>
+	</tr>
+	
+	<tr>
+	<td ><strong><div align="center">9</strong></td>
+	<td><strong><div align="left">Kirchhoff's Law</div></strong></td>
+	<td><strong><div align="left">Mr.M Seshagiri</div></strong></td>
+	<td><strong><a href="https://youtu.be/5F1le9jIpmE">Click for Video</a></strong></td>
 	</tr>
 
 
