--- a/maths/odevc/odevc-links.html
+++ b/maths/odevc/odevc-links.html
@@ -480,14 +480,14 @@ border: 2px solid #ffffff;
 	<td><strong><div align="center">29</strong></td>
 	<td><strong><div align="left">Line Integrals</div></strong></td>
 	<td><strong><div align="left">Dr.G Padma</div></strong></td>
-	<td><strong><a href="" >Click for Video</a></strong></td></tr>
+	<td><strong><a href="https://youtu.be/lvz9KzkYnV4" >Click for Video</a></strong></td></tr>
 <tr>
 	
 	
 	<td><strong><div align="center">30</strong></td>
-	<td><strong><div align="left">Work Done by Line Integrals</div></strong></td>
+	<td><strong><div align="left">Work Done by Force</div></strong></td>
 	<td><strong><div align="left">Dr.G Padma</div></strong></td>
-	<td><strong><a href="" >Click for Video</a></strong></td></tr>
+	<td><strong><a href="https://youtu.be/HQC9J1EqZGY" >Click for Video</a></strong></td></tr>
 	
 	
 	<tr>
@@ -500,21 +500,21 @@ border: 2px solid #ffffff;
 	<td><strong><div align="center">32</strong></td>
 	<td><strong><div align="left">Green’s Theorem in a Plane</div></strong></td>
 	<td><strong><div align="left">Dr.G Padma</div></strong></td>
-	<td><strong><a href="" >Click for Video</a></strong></td></tr>
+	<td><strong><a href="https://youtu.be/yhWx0pYDLTM" >Click for Video</a></strong></td></tr>
 	
 	
 	<tr>
 	<td><strong><div align="center">33</strong></td>
 	<td><strong><div align="left">Stoke’s Theorem</div></strong></td>
 	<td><strong><div align="left">Dr.G Padma</div></strong></td>
-	<td><strong><a href="" >Click for Video</a></strong></td>
+	<td><strong><a href="https://youtu.be/NjOe07-vJTU" >Click for Video</a></strong></td>
 	</tr>
 	
       <tr>
 	<td><strong><div align="center">34</strong></td>
 	<td><strong><div align="left">Gauss Divergence Theorem</div></strong></td>
 	<td><strong><div align="left">Dr.G Padma</div></strong></td>
-	<td><strong><a href="" >Click for Video</a></strong></td>
+	<td><strong><a href="https://youtu.be/cE2ei0OhbQA" >Click for Video</a></strong></td>
 	</tr>
 	
 	<tr>
